--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,7 +23,9 @@ effects:
         count: 30
 colornametags: true
 
+chatchannel: VanishNP
+
 permtest: false
 debug: false
 configVersionDoNotTouch: 
-    SeriouslyThisWillEraseYourConfig: 5
+    SeriouslyThisWillEraseYourConfig: 6
