--- a/pom.xml
+++ b/pom.xml
@@ -155,8 +155,9 @@
     </dependency>
     <dependency>
       <groupId>au.com.addstar</groupId>
-      <artifactId>BungeeChatBukkit</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <artifactId>BungeeChat-Bukkit</artifactId>
+      <version>1.0.1-SNAPSHOT</version>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
