Updated for mc 1.9

--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,12 @@
 
   <repositories>
     <repository>
-      <id>kitteh-repo</id>
-      <url>http://repo.kitteh.org/content/groups/public</url>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
     </repository>
     <repository>
-      <id>bukkit-repo</id>
-      <url>http://repo.bukkit.org/content/groups/public</url>
+      <id>kitteh-repo</id>
+      <url>http://repo.kitteh.org/content/groups/public</url>
     </repository>
     <repository>
       <id>addstar-snapshot-repo</id>
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.7.9-R0.1-SNAPSHOT</version>
+      <version>1.9-R0.1-SNAPSHOT</version>
       <type>jar</type>
       <optional>true</optional>
     </dependency>
