--- a/pom.xml
+++ b/pom.xml
@@ -6,84 +6,142 @@
   <packaging>jar</packaging>
 
   <name>VanishNoPacket</name>
-  <version>3.19.2bungee-SNAPSHOT</version>
-
-  <url>http://github.com/Schmoller/VanishNoPacket</url>
-
+  <version>3.19.3-SNAPSHOT</version>
+  <url>https://github.com/AddstarMC/VanishNoPacket</url>
   <properties>
+    <build.number />
+    <plugin.version>${project.version}-${build.number}</plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <vnp-version>${project.version}-${env.BUILD_NUMBER}</vnp-version>
   </properties>
-
   <scm>
-    <connection>scm:git:git://github.com/Schmoller/VanishNoPacket.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/Schmoller/VanishNoPacket.git</developerConnection>
-    <url>https://github.com/Schmoller/VanishNoPacket</url>
+    <connection>scm:git:git@github.com:AddstarMC/VanishNoPacket.git</connection>
+    <developerConnection>scm:git:git@github.com/AddstarMC/VanishNoPacket.git</developerConnection>
+    <url>https://github.com/AddstarMC/VanishNoPacket</url>
   </scm>
-
+  <developers>
+    <developer>
+      <id>AddstarMC</id>
+      <name>AddstarMC</name>
+      <url>http://github.com/AddstarMC</url>
+      <roles>
+        <role>developer</role>
+        <role>maintainer</role>
+      </roles>
+      <timezone>10</timezone>
+    </developer>
+  </developers>
+  <distributionManagement>
+    <repository>
+      <id>maven.addstar.com.au</id>
+      <name>maven.addstar.com.au-releases</name>
+      <url>http://maven.addstar.com.au/artifactory/ext-release-local</url>
+    </repository>
+    <snapshotRepository>
+      <id>maven.addstar.com.au</id>
+      <name>maven.addstar.com.au-snapshots</name>
+      <url>http://maven.addstar.com.au/artifactory/ext-snapshot-local</url>
+    </snapshotRepository>
+  </distributionManagement>
   <repositories>
     <repository>
-      <id>spigot-repo</id>
-      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+      <id>md5-repo</id>
+      <url>http://repo.md-5.net/content/groups/public/</url>
+      <releases><enabled>true</enabled></releases>
+      <snapshots><enabled>true</enabled></snapshots>
     </repository>
     <repository>
-      <id>kitteh-repo</id>
-      <url>http://repo.kitteh.org/content/groups/public</url>
+      <id>md_5-releases</id>
+      <url>https://repo.md-5.net/content/repositories/releases/</url>
+      <snapshots><enabled>false</enabled></snapshots>
+      <releases><enabled>true</enabled></releases>
+    </repository>
+    <!-- Addstar repos -->
+    <repository>
+      <id>addstar-repo</id>
+      <url>http://maven.addstar.com.au/artifactory/ext-release-local</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
     <repository>
       <id>addstar-snapshot-repo</id>
       <url>http://maven.addstar.com.au/artifactory/ext-snapshot-local</url>
       <snapshots>
-      	<enabled>true</enabled>
+        <enabled>true</enabled>
       </snapshots>
       <releases>
         <enabled>false</enabled>
       </releases>
     </repository>
+    <!-- For Vault -->
+    <repository>
+      <id>vault-repo</id>
+      <name>Public Releases</name>
+      <url>http://nexus.hc.to/content/repositories/pub_releases/</url>
+    </repository>
+    <!-- ProtocolLib -->
+    <repository>
+      <id>dmulloy2-releases</id>
+      <url>http://repo.dmulloy2.net/content/repositories/releases/</url>
+    </repository>
+    <repository>
+      <id>dmulloy2-repo</id>
+      <url>http://repo.dmulloy2.net/content/groups/public/</url>
+    </repository>
+
+    <!-- Maven central -->
+    <repository>
+      <id>maven-central</id>
+      <url>http://repo1.maven.org/maven2/</url>
+    </repository>
+    <repository>
+      <id>md_5-snapshots</id>
+      <url>https://repo.md-5.net/content/repositories/snapshots/</url>
+      <snapshots><enabled>true</enabled></snapshots>
+    </repository>
   </repositories>
+
+
 
   <dependencies>
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.9-R0.1-SNAPSHOT</version>
+      <version>1.11.2-R0.1-SNAPSHOT</version>
       <type>jar</type>
       <optional>true</optional>
+      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.comphenix.protocol</groupId>
-      <artifactId>ProtocolLib</artifactId>
-      <version>1.5.1</version>
+      <groupId>au.com.addstar</groupId>
+      <artifactId>BungeeChat-Bukkit</artifactId>
+      <version>1.1.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.milkbowl.vault</groupId>
+      <artifactId>VaultAPI</artifactId>
+      <version>1.6</version>
       <type>jar</type>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.getspout</groupId>
-      <artifactId>spoutplugin</artifactId>
-      <version>1.5.2-R1.0-SNAPSHOT-HOSTED</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.dynmap</groupId>
-      <artifactId>DynmapCoreAPI</artifactId>
-      <version>1.7</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>de.bananaco</groupId>
-      <artifactId>bPermissions</artifactId>
-      <version>v2.12-DEV</version>
-      <optional>true</optional>
       <exclusions>
-        <exclusion>
-          <groupId>org.bukkit</groupId>
-          <artifactId>craftbukkit</artifactId>
-        </exclusion>
         <exclusion>
           <groupId>org.bukkit</groupId>
           <artifactId>bukkit</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.comphenix.protocol</groupId>
+      <artifactId>ProtocolLib</artifactId>
+      <version>4.2.0-SNAPSHOT</version>
+      <type>jar</type>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.dynmap</groupId>
+      <artifactId>DynmapCoreAPI</artifactId>
+      <version>1.9.2</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.earth2me</groupId>
@@ -92,72 +150,23 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>uk.org.whoami</groupId>
-      <artifactId>GeoIPTools</artifactId>
-      <version>1.0</version>
+      <groupId>LibsDisguises</groupId>
+      <artifactId>LibsDisguises</artifactId>
+      <version>9.2.4-SNAPSHOT</version>
       <optional>true</optional>
+      <scope>provided</scope>
       <exclusions>
         <exclusion>
-          <groupId>org.bukkit</groupId>
-          <artifactId>bukkit</artifactId>
+          <groupId>org.spigotmc</groupId>
+          <artifactId>spigot-api</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>com.ramblingwood.minecraft.jsonapi</groupId>
-      <artifactId>JSONAPI</artifactId>
-      <version>bleeding</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.kitteh</groupId>
-      <artifactId>tagapi</artifactId>
-      <version>3.0</version>
-      <optional>true</optional>
-      <exclusions>
-        <exclusion>
-          <groupId>org.bukkit</groupId>
-          <artifactId>bukkit</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>pgDev</groupId>
-      <artifactId>disguisecraft</artifactId>
-      <version>2.8-SNAPSHOT</version>
-      <optional>true</optional>
-      <exclusions>
-        <exclusion>
-          <groupId>org.bukkit</groupId>
-          <artifactId>craftbukkit</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>lishid</groupId>
-          <artifactId>orebfuscator</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.getspout</groupId>
-          <artifactId>spoutplugin</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>net.milkbowl.vault</groupId>
-      <artifactId>Vault</artifactId>
-      <version>1.2.32</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>au.com.addstar</groupId>
-      <artifactId>BungeeChat-Bukkit</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
-      <optional>true</optional>
     </dependency>
   </dependencies>
 
@@ -187,17 +196,17 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.7</version>
+        <version>2.8.2</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.4</version>
+        <version>3.0.2</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>3.5.1</version>
       </plugin>
     </plugins>
   </build>
