--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: VanishNoPacket
 main: org.kitteh.vanish.VanishPlugin
-version: '${vnp-version}'
+version: '${plugin.version}'
 website: http://kitteh.org
-softdepend: [Essentials,dynmap,JSONAPI,bPermissions,Spout,GeoIPTools,TagAPI,ProtocolLib,Vault]
-depend: [BungeeChatBukkit]
+softdepend: [Essentials,dynmap]
+depend: [BungeeChatBukkit, Vault, ProtocolLib]
 author: mbaxter
 description: Vanish for the distinguished admin
 dev-url: http://dev.bukkit.org/server-mods/vanish/
