--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,9 @@
     <repository>
       <id>dmulloy2-releases</id>
       <url>http://repo.dmulloy2.net/content/repositories/releases/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
     <repository>
       <id>dmulloy2-repo</id>
@@ -107,7 +110,7 @@
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.11.2-R0.1-SNAPSHOT</version>
+      <version>1.12-R0.1-SNAPSHOT</version>
       <type>jar</type>
       <optional>true</optional>
       <scope>provided</scope>
@@ -133,14 +136,14 @@
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib</artifactId>
-      <version>4.2.0-SNAPSHOT</version>
+      <version>4.3.0-SNAPSHOT</version>
       <type>jar</type>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.dynmap</groupId>
-      <artifactId>DynmapCoreAPI</artifactId>
-      <version>1.9.2</version>
+      <groupId>us.dynmap</groupId>
+      <artifactId>dynmap-api</artifactId>
+      <version>2.5</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -152,7 +155,7 @@
     <dependency>
       <groupId>LibsDisguises</groupId>
       <artifactId>LibsDisguises</artifactId>
-      <version>9.2.4-SNAPSHOT</version>
+      <version>9.4.0-SNAPSHOT</version>
       <optional>true</optional>
       <scope>provided</scope>
       <exclusions>
@@ -165,7 +168,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
