Update to Spigot 1.12.2 - THIS IS A BREAKING CHANGE AND WILL NOT WORK ON LOWER MC VERSIONS Version to 3.20 Move to new hider api Update Dynmap dependency Update Libdisquises dep

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 #
 #  See documentation for details:
 #  http://dev.bukkit.org/server-mods/vanish/pages/configuration/
-#
+#  ${project.description}
 fakeannounce:
     automaticforsilentjoin: false
     join: '%p joined the game.'
