--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,14 @@
   <packaging>jar</packaging>
 
   <name>VanishNoPacket</name>
-  <version>3.19.3-SNAPSHOT</version>
+  <version>3.20.0-SNAPSHOT</version>
+  <description>A plugin built for Spigot ${spigot.version}. Will not work on lower versions</description>
   <url>https://github.com/AddstarMC/VanishNoPacket</url>
   <properties>
     <build.number />
     <plugin.version>${project.version}-${build.number}</plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spigot.version>1.12.2-R0.1-SNAPSHOT</spigot.version>
   </properties>
   <scm>
     <connection>scm:git:git@github.com:AddstarMC/VanishNoPacket.git</connection>
@@ -91,7 +93,13 @@
       <id>dmulloy2-repo</id>
       <url>http://repo.dmulloy2.net/content/groups/public/</url>
     </repository>
-
+    <repository>
+      <name>dynmap</name>
+      <id>dynmap-repo</id>
+      <url>http://repo.mikeprimm.com/</url>
+      <releases><enabled>true</enabled></releases>
+      <snapshots><enabled>true</enabled></snapshots>
+    </repository>
     <!-- Maven central -->
     <repository>
       <id>maven-central</id>
@@ -110,15 +118,14 @@
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.12-R0.1-SNAPSHOT</version>
+      <version>${spigot.version}</version>
       <type>jar</type>
-      <optional>true</optional>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>au.com.addstar</groupId>
       <artifactId>BungeeChat-Bukkit</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>1.2.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -136,13 +143,12 @@
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib</artifactId>
-      <version>4.3.0-SNAPSHOT</version>
-      <type>jar</type>
+      <version>4.4.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>us.dynmap</groupId>
-      <artifactId>dynmap-api</artifactId>
+      <artifactId>DynmapCoreAPI</artifactId>
       <version>2.5</version>
       <optional>true</optional>
     </dependency>
@@ -155,7 +161,7 @@
     <dependency>
       <groupId>LibsDisguises</groupId>
       <artifactId>LibsDisguises</artifactId>
-      <version>9.4.0-SNAPSHOT</version>
+      <version>9.5.0</version>
       <optional>true</optional>
       <scope>provided</scope>
       <exclusions>
@@ -174,7 +180,6 @@
   </dependencies>
 
   <build>
-    <finalName>${project.artifactId}</finalName>
     <directory>target</directory>
     <resources>
       <resource>
@@ -201,6 +206,19 @@
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.8.2</version>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.0.1</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
