--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,11 @@
 name: VanishNoPacket
 main: org.kitteh.vanish.VanishPlugin
 version: ${plugin.version}
-website: http://kitteh.org
+website: ${project.url}
 softdepend: [Essentials,dynmap]
 depend: [BungeeChatBukkit, Vault, ProtocolLib]
 author: mbaxter, narimm
 description: ${project.description}
-dev-url:{$project.url}
 commands:
   vanish:
     description: poof
